# cosc363-rayTracer

./: .gitignore  CMakeLists.txt
src/: Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Light.cpp  Light.h  Plane.cpp  Plane.h  RayTracer.cpp  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h
